--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
